[package]
name = "connect4-websocket-server"
version = "0.1.0"
authors = ["Rimpampa <riccardo.ripanti01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
rand = "0.7.3"
log = "0.4.8"

[dependencies.log4rs]
version = "0.11.0"
features = [
    "yaml_format",
    "pattern_encoder",
    "compound_policy",
    "fixed_window_roller",
    "rolling_file_appender",
    "size_trigger",
]